# sceptre-mcp-server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  QUICKSTART.md  README.md  example-mcp-config.json  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: check.yaml  release.yaml  tests.yaml
.kiro/hooks/: commit-message-helper.kiro.hook  lint-and-format-on-save.kiro.hook  lint-on-save.kiro.hook  mcp-server-test.kiro.hook  post-task-tests.kiro.hook  test-on-save.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/sceptre-mcp-server/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: aws-cli-best-practices.md  cdk-best-practices.md  development-standards.md  docker-best-practices.md  git-best-practices.md  mcp-best-practices.md  python-best-practices.md  react-best-practices.md  security-best-practices.md  testing-best-practices.md  typescript-best-practices.md
src/sceptre_mcp_server/: __init__.py  server.py
tests/: test_server.py
